Algorithm Perfection
New Table "Raid Progression"
RaiderIO fetch algorithm fixes etc