@@ -1,13 +1,11 @@
 package followarcane.wowdatacrawler.domain.converter;
 
-import followarcane.wowdatacrawler.domain.model.CharacterInfoResponse;
-import followarcane.wowdatacrawler.domain.model.CharacterInfo;
-import followarcane.wowdatacrawler.domain.model.RaiderIOData;
-import followarcane.wowdatacrawler.domain.model.RaiderIODataResponse;
+import followarcane.wowdatacrawler.domain.model.*;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Component
 public class CharacterInfoResponseConverter {
@@ -15,7 +13,7 @@ public class CharacterInfoResponseConverter {
     public List<CharacterInfoResponse> convert(List<CharacterInfo> listCharacterInfo) {
         return listCharacterInfo.stream()
                 .map(CharacterInfoResponseConverter::convert)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static CharacterInfoResponse convert(CharacterInfo characterInfo) {
@@ -23,6 +21,13 @@ public class CharacterInfoResponseConverter {
         RaiderIODataResponse raiderIODataResponse = null;
         if (raiderIOData != null) {
             raiderIODataResponse = convert(raiderIOData);
+        }
+
+        List<RaidProgressionResponse> raidProgressions = null;
+        if (characterInfo.getRaidProgressions() != null) {
+            raidProgressions = characterInfo.getRaidProgressions().stream()
+                    .map(CharacterInfoResponseConverter::convert)
+                    .collect(Collectors.toList());
         }
 
         return CharacterInfoResponse.builder()
@@ -33,6 +38,7 @@ public class CharacterInfoResponseConverter {
                 .realm(characterInfo.getRealm())
                 .ranking(characterInfo.getRanking())
                 .raiderIODataResponse(raiderIODataResponse)
+                .raidProgressions(raidProgressions)
                 .build();
     }
 
@@ -42,6 +48,17 @@ public class CharacterInfoResponseConverter {
                 .race(raiderIOData.getRace())
                 .faction(raiderIOData.getFaction())
                 .gender(raiderIOData.getGender())
+                .thumbnailUrl(raiderIOData.getThumbnailUrl())
+                .activeSpecRole(raiderIOData.getActiveSpecRole())
+                .achievementPoints(String.valueOf(raiderIOData.getAchievementPoints()))
+                .activeSpecName(raiderIOData.getActiveSpecName())
+                .build();
+    }
+
+    public static RaidProgressionResponse convert(RaidProgression raidProgression) {
+        return RaidProgressionResponse.builder()
+                .raidName(raidProgression.getRaidName())
+                .summary(raidProgression.getSummary())
                 .build();
     }
 }
